# grove

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  entry.py  lock_new_requirements.sh  nginx.example.conf  pyproject.toml  requirements.txt  start.sh  todo.md  worker.py
.github/workflows/: docker-publish.yaml
grove/: api.py  celery_app.py  config.py  db.py  events.py  extensions.py  routes.py  start.py
grove/misc/: sources.csv
grove/services/: util.py  validation.py
grove/services/system/: emit.py  log.py  search.py  subprocess.py
grove/services/system/workflow/: _health.py  _job.py  _maintenance.py  jobmaster.py  tasks.py
grove/services/tools/: arecord.py  base.py  geoip.py  lookup.py  offline_result.py  screenshot.py  subdomain.py  tool.py
grove/services/tools/code/: analyzer.py  downloader.py
grove/static/css/: bootstrap-icons.min.css  bootstrap.min.css  custom.css  datepicker.css  result.css
grove/static/js/: custom-effects.js  datepicker.js  websocket.js
grove/templates/: index.html
grove/templates/base/: footer.html  head.html  navbar.html
grove/templates/extra/: confirm_modal.html
grove/templates/extra/flash/: alert.html
grove/templates/extra/modal/: modalCodeExif.html  modalCodeGps.html  modalCodeOcr.html  result_modal.html
grove/templates/modules/: jobs.html  result.html  search.html  settings.html  task.html  view.html
