[build-system]
requires = ["hatchling >= 1.26", "hatch-requirements-txt"]
build-backend = "hatchling.build"


[project]
name = "Grove"
version = "1.0.0"
description = "Grove"
dynamic = ["dependencies"]


[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]


# requirements.txt pulls sublist3r from a git+https URL; hatchling rejects such
[tool.hatch.metadata]
allow-direct-references = true


[tool.djlint]
profile = "jinja"
max_line_length = 120
max_attribute_length = 120
format_js = true
format_css = true
indent = 20
use_gitignore = true
line_break_after_multiline_tag = true
max_blank_lines = 5


[tool.ruff]
line-length = 120
